# music-util

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
music_util/: main.py
notebooks/: test.ipynb
src/music_util/: main.py  transcr.py  utils.py  voc_rem.py
